# project1_ibragimov_shakhzod_m25-555

./: README.md  pyproject.toml
labyrinth_game/: README.md  constants.py  main.py  player_actions.py  utils.py  utils.py'
